# my-c2l-gcloud

./: .gitmodules  Dockerfile  README.md  build.sh  createTPUs.py  destroyTPUs.py  id_rsa  id_rsa.pub  pyproject.toml  reconfigTPU.py  setup.sh  tpuvmssh.sh
